--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -14,9 +14,10 @@
                 margin: 0 auto;
                 align-content: center;
                 align-items: center;
+                width: 200px;
             }
         </style>
-            <h:form id="frm" style="width: 200px;" styleClass="centred-form">
+            <h:form id="frm" styleClass="centred-form">
             <p:growl id="growl" showDetail="true"/>
             <h:panelGrid columns="3" summary="Inicio de sesión"  >
                 <p:column/>
