--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -8,7 +8,15 @@
         <title>solicitud de permisos</title>
     </h:head>
     <h:body>
-        <h:form>
+        <style>
+            .centred-form{
+                margin: 0 auto;
+                align-content: center;
+                align-items: center;
+                width: 50%;
+            }
+            </style>
+            <h:form styleClass="centred-form" id="frm">
             <p:panel header="Gestionar nuevo permiso">
                 <p:messages />
                 <h:panelGrid id="w" columns="2" columnClasses="label, value">
@@ -21,9 +29,10 @@
 
                     <p:outputLabel for="console" value="¿Para quién es el permiso?: *" />
                     <p:selectOneMenu id="console1" value="#{permisoEstudianteController.p.permisosPK.ipPersona}" 
-                                     style="width:125px" title="Seleccione el permiso que necesita">
+                                     style="width:125px" title="Seleccione el permiso que necesita"
+                                     disabled="#{!permisoEstudianteController.seleccionPermiso}">
                         <f:selectItems value="#{permisoEstudianteController.listaEstudiantes()}"/>
-                        <f:ajax render="m" execute="SeleccionEstudiante"/>
+                        <f:ajax render="m" execute="seleccionEstudiante"/>
                     </p:selectOneMenu>
                     
                     <p:column/>
@@ -39,7 +48,7 @@
                     </p:panelGrid>
 
                     <h:outputLabel value="Motivo: *"/>
-                    <p:inputText value="#{permisoEstudianteController.p.permisosComentario}" required="true"/>
+                    <p:inputText value="#{permisoEstudianteController.p.permisosComentario}" required="true" />
 
                     <h:outputLabel value="Solicitado por: "/>
                     <h:outputLabel value="#{permisoEstudianteController.us.persona.personaNombre} #{permisoEstudianteController.us.persona.personaApellido}"/>
@@ -53,6 +62,7 @@
                                 navigator="true" pattern="yyyy-mm-dd" />
                </h:panelGrid>
             </p:panel>
+                <p:commandButton id="summit" value="Solicitar"/>
         </h:form>
     </h:body>
 </html>
