--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -6,6 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>solicitud de permisos</title>
+        <f:event listener="#{permisoEstudianteController.inicial()}" type="preRenderView"/>
     </h:head>
     <h:body>
         <style>
