--- a/saitae-web/src/main/webapp/pages/aula.xhtml
+++ b/saitae-web/src/main/webapp/pages/aula.xhtml
@@ -4,28 +4,18 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-   <h:head>
+    <h:head>
         <title>Administración de Aulas</title>
+        <h:outputStylesheet library="css" name="tpp.css"/>
     </h:head>
     <h:body>
-        <style type="text/css">
-            .ui-row-editor .ui-row-editor-pencil {
-                margin-left:8px;                
-            }
-            .centred-form{
-                margin: 0 auto;
-                align-content: center;
-                align-items: center;
-                width: 50%;
-            }
-        </style>
-            <h:form id="form" styleClass="centred-form">
+        <h:form id="form" styleClass="centred-form">
             <p:growl id="msgs" showDetail="true"/>
-            <h3>Administración Aulas</h3>
+            <h3>Aulas</h3>
             <p:dataTable id="aula" var="a" value="#{aulaController.aulas}" editable="true" 
-                         widgetVar="aula" editMode="cell">
+                         widgetVar="aula" >
                 <f:facet name="header">
-                    AULAS
+                    Administración de Aulas
                 </f:facet>
 
                 <p:ajax event="rowEdit" listener="#{aulaController.onRowEdit}" update=":form:msgs" />
@@ -38,8 +28,8 @@
 
                 <p:column headerText="Zona">
                     <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{a.zonaAula.zonaNombre}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{a.zonaAula.zonaNombre}" 
+                        <f:facet name="output"><h:outputText value="#{a.zonaAula.idzona}" /></f:facet>
+                        <f:facet name="input"><p:inputText value="#{a.zonaAula.idzona}" 
                                                            style="width:100%" label="Zona"/></f:facet>
                     </p:cellEditor>
                 </p:column>
@@ -50,6 +40,9 @@
                         <f:facet name="input"><p:inputText value="#{a.aulaComentario}" 
                                                            style="width:100%" label="Comentario"/></f:facet>
                     </p:cellEditor>
+                </p:column>
+                <p:column style="width:35px">
+                    <p:rowEditor />
                 </p:column>
             </p:dataTable>
             <div class="ui-g">
@@ -67,4 +60,5 @@
         </h:form>
     </h:body>
 </html>
+
 
